<resources>
    <string name="app_name">Budgetify</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_category">Enter category</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save">Save</string>
    <string name="total_amount_format">Total: %.2f</string>
    <string name="view_charts">View Charts</string>
</resources>