<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Поле ввода суммы -->
    <EditText
        android:id="@+id/edit_text_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp" />

    <!-- Поле ввода категории -->
    <EditText
        android:id="@+id/edit_text_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp" />

    <!-- Радиогруппа для выбора типа транзакции -->
    <RadioGroup
        android:id="@+id/radio_group_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/radio_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense" />
    </RadioGroup>

    <!-- Кнопка для сохранения -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
